@@ -1,4 +1,9 @@
 requires 'perl', '5.008001';
+requires 'Modern::Perl', 0;
+requires 'Class::MOP', 0;
+requires 'Moo', 0;
+requires 'Yandex::OAuth::Client', 0.04;
+
 
 on 'test' => sub {
     requires 'Test::More', '0.98';
