@@ -2,6 +2,8 @@ use strict;
 use Test::More 0.98;
 
 use_ok $_ for qw(
+    Yandex::OAuth
+    Yandex::OAuth::Client
     Yandex::Metrika
 );
 
